# dejagnu-try

./: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  maths  maths.cpp  maths.sum  maths0  site.exp  testrun.sum
.deps/: maths.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
testsuite/config/: unix.exp
testsuite/maths.test/: calc.exp
