dnl Process this file with autoconf to create a configure script
AC_PREREQ(2.5)
AC_INIT(maths, 1.1)
AC_CONFIG_SRCDIR(maths.cpp)
AM_INIT_AUTOMAKE

AC_PROG_CXX
AC_PROG_INSTALL
#
# Look for various header files
#
AC_CHECK_HEADERS(stdlib.h)

AM_MAINTAINER_MODE

#
# Output Makefile with substitutions
AC_SUBST(CC)
AC_OUTPUT(Makefile)
